Changing about us

--- a/www/work.html
+++ b/www/work.html
@@ -69,7 +69,10 @@
 		<div class="row centered mt mb">
 			<div class="col-lg-8 col-lg-offset-2">
 				<h4>ABOUT THE PROJECT</h4>
-				<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.</p>
+				<p>Imagine the year 2035 - where everything has a NFC chip in it...... (trust me, it has started already in some shops!) </p>
+				<p>And you walk into a shop, tap your smart-phone on an product you like.. and voila! You get all the information that you require - and you can share the details on social media, with personal friends, buy it instantly or even put it in the wish-list for future reference. </p>
+
+				<p>And all this in one click!</p>
 			</div>
 			<div class="col-lg-10 col-lg-offset-1 mt">
 				<img class="img-responsive" src="assets/img/pr01.jpg">
