--- a/platforms/android/assets/www/index.html
+++ b/platforms/android/assets/www/index.html
@@ -1,88 +1,253 @@
-<!DOCTYPE HTML>
-<html>
-<head>
-<meta name="viewport" content="width=320, user-scalable=no" />
-<meta http-equiv="Content-type" content="text/html;charset=UTF-8">
-<title>NFC Reader Demo</title>
-<link rel="stylesheet" href="css/index.css" type="text/css" media="screen" title="no title" charset="utf-8">
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="">
+    <meta name="author" content="">
+    <link rel="shortcut icon" href="assets/ico/favicon.ico">
 
-<link rel="stylesheet" href="lib/angular-ui/css/mobile-angular-ui-base.min.css">
-<script src="lib/angular/angular.min.js"></script>
-<script src="lib/angular-ui/js/mobile-angular-ui.min.js"></script>
-</head>
+    <title>INSTANT - Bootstrap Theme</title>
 
-<body>
-    <h1>HitMe</h1>
-    <div id="tagContents">
-        <div class="hidden">
-            Scan a tag to being.
+    <!-- Bootstrap core CSS -->
+    <link href="assets/css/bootstrap.css" rel="stylesheet">
+
+    <!-- Custom styles for this template -->
+    <link href="assets/css/style.css" rel="stylesheet">
+    <link href="assets/css/font-awesome.min.css" rel="stylesheet">
+
+    <!-- Just for debugging purposes. Don't actually copy this line! -->
+    <!--[if lt IE 9]><script src="../../assets/js/ie8-responsive-file-warning.js"></script><![endif]-->
+
+    <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
+    <!--[if lt IE 9]>
+      <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
+      <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
+    <![endif]-->
+  </head>
+
+  <body>
+  	<script>
+  		window.fbAsyncInit = function() {
+  			FB.init({
+  				appId      : '2449300805',
+  				xfbml      : true,
+  				version    : 'v2.0'
+  			});
+  		};
+
+  		(function(d, s, id){
+  			var js, fjs = d.getElementsByTagName(s)[0];
+  			if (d.getElementById(id)) {return;}
+  			js = d.createElement(s); js.id = id;
+  			js.src = "//connect.facebook.net/en_GB/sdk.js";
+  			fjs.parentNode.insertBefore(js, fjs);
+  		}(document, 'script', 'facebook-jssdk'));
+  	</script>		                   	
+
+    <!-- Static navbar -->
+    <div class="navbar navbar-default navbar-fixed-top" role="navigation">
+      <div class="container">
+        <div class="navbar-header">
+          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+            <span class="sr-only">Toggle navigation</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+          <a class="navbar-brand" href="index.html"></a>
         </div>
+        <div class="navbar-collapse collapse">
+          <ul class="nav navbar-nav navbar-right">
+            <li class="active"><a href="index.html">Home</a></li>
+            <li><a href="about.html">About</a></li>
+            <li><a href="#works">Works</a></li>
+          </ul>
+        </div><!--/.nav-collapse -->
+      </div>
     </div>
 
-    <script id="non-ndef-template" type="text/x-handlebars-template">
-        <p>Scanned a non-NDEF NFC tag</p>
-        <p>
-            Tag Id: <strong>{{ bytesToHexString id }}</strong>
-        </p>
-    </script>
 
-    <script id="tag-template" type="text/x-handlebars-template">
-        <p>Scanned an NDEF tag with {{ ndefMessage.length }} {{ pluralize ndefMessage.length 'record' 'records' }}</p>
+	<div id="headerwrap">
+	    <div class="container">
+			<div class="row">
+				<div class="col-lg-6 col-lg-offset-3">
+					<h4><script>
+							  // This is called with the results from from FB.getLoginStatus().
+							  function statusChangeCallback(response) {
+							    console.log('statusChangeCallback');
+							    console.log(response);
+							    // The response object is returned with a status field that lets the
+							    // app know the current login status of the person.
+							    // Full docs on the response object can be found in the documentation
+							    // for FB.getLoginStatus().
+							    if (response.status === 'connected') {
+							      // Logged into your app and Facebook.
+							      testAPI();
+							    } else if (response.status === 'not_authorized') {
+							      // The person is logged into Facebook, but not your app.
+							      document.getElementById('status').innerHTML = 'Please log ' +
+							        'into this app.';
+							    } else {
+							      // The person is not logged into Facebook, so we're not sure if
+							      // they are logged into this app or not.
+							      document.getElementById('status').innerHTML = 'Please log ' +
+							        'into Facebook.';
+							    }
+							  }
 
-        {{!
-            BB10 and WP8 will not have any meta info
-            Android P2P will not have id, but will have type
-        }}
-        <dl>
-            {{#if id}}
-            <dt>Tag Id</dt>             <dd>{{ bytesToHexString id }}</dd>
-            {{/if}}
-            
-            {{#if type}}
-            <dt>Tag Type</dt>           <dd>{{ type }}</dd>
-            {{/if}}
+							  // This function is called when someone finishes with the Login
+							  // Button.  See the onlogin handler attached to it in the sample
+							  // code below.
+							  function checkLoginState() {
+							    FB.getLoginStatus(function(response) {
+							      statusChangeCallback(response);
+							    });
+							  }
 
-            {{#if maxSize }}
-            <dt>Max Size</dt>           <dd>{{ maxSize }} bytes</dd>
-            {{/if}}            
+							  window.fbAsyncInit = function() {
+							  FB.init({
+							    appId      : '2449300805',
+							    cookie     : true,  // enable cookies to allow the server to access 
+							                        // the session
+							    xfbml      : true,  // parse social plugins on this page
+							    version    : 'v2.0' // use version 2.0
+							  });
 
-            {{#if freeSpaceSize }}
-            <dt>Free Space</dt>         <dd>{{ freeSpaceSize }} bytes</dd>
-            {{/if}}
+							  // Now that we've initialized the JavaScript SDK, we call 
+							  // FB.getLoginStatus().  This function gets the state of the
+							  // person visiting this page and can return one of three states to
+							  // the callback you provide.  They can be:
+							  //
+							  // 1. Logged into your app ('connected')
+							  // 2. Logged into Facebook, but not your app ('not_authorized')
+							  // 3. Not logged into Facebook and can't tell if they are logged into
+							  //    your app or not.
+							  //
+							  // These three cases are handled in the callback function.
 
-            {{#if id}}
-            <dt>Is Writable</dt>        <dd>{{ toString isWritable }}</dd>
-            <dt>Can Make Read Only</dt> <dd>{{ toString canMakeReadOnly }}</dd>
-            {{/if}}            
-        </dl>
+							  FB.getLoginStatus(function(response) {
+							    statusChangeCallback(response);
+							  });
 
-        {{#each ndefMessage}}  {{! does not read well, iterating on records non messages}}
-        <div class='record'>
-            Record {{ @index }}:<br/>
-            TNF: <b>{{ tnfToString tnf }}</b><br/>        
-            {{#if tnf}}
-                Record Type: <b>{{ bytesToString type }}</b><br/>
-                Payload: <b>{{ decodePayload this }}</b><br/>
-                {{#if id}}
-                    Record Id: <b>{{ bytesToString id }}</b><br/>            
-                {{/if}}
-            {{/if}}
-        </div>
-        {{/each}}
+							  };
 
-        <div class="text-center">
-            <p><button class="btn btn-default" onclick="tellFriends();">Tell my friends</button></p>
-            <p><button class="btn btn-default">Txt friend</button></p>
-            <p><button class="btn btn-default">Buy via pay pal</button></p>
-            <p><button class="btn btn-default">Add to wishlist</button></p>
-        </div>
-    </script>
-    
-    <script type="text/javascript" charset="utf-8" src="cordova.js"></script>
-    <script type="text/javascript" charset="utf-8" src="js/handlebars.js"></script>
-    <script type="text/javascript" charset="utf-8" src="js/index.js"></script>
-    <script type="text/javascript">
-        app.initialize();
-    </script>
-</body>
+							  // Load the SDK asynchronously
+							  (function(d, s, id) {
+							    var js, fjs = d.getElementsByTagName(s)[0];
+							    if (d.getElementById(id)) return;
+							    js = d.createElement(s); js.id = id;
+							    js.src = "//connect.facebook.net/en_US/sdk.js";
+							    fjs.parentNode.insertBefore(js, fjs);
+							  }(document, 'script', 'facebook-jssdk'));
+
+							  // Here we run a very simple test of the Graph API after login is
+							  // successful.  See statusChangeCallback() for when this call is made.
+							  function testAPI() {
+							    console.log('Welcome!  Fetching your information.... ');
+							    FB.api('/me', function(response) {
+							      console.log('Successful login for: ' + response.name);
+							      document.getElementById('status').innerHTML =
+							        'Thanks for logging in, ' + response.name + '!';
+							    });
+							  }
+							</script>
+
+							<!--
+							  Below we include the Login Button social plugin. This button uses
+							  the JavaScript SDK to present a graphical Login button that triggers
+							  the FB.login() function when clicked.
+							-->
+
+							<fb:login-button scope="public_profile,email" onlogin="checkLoginState();">
+							</fb:login-button>
+
+							<div id="status">
+							</div>
+							</h4>
+					<h1><img src="assets/img/hitme.jpg"</img></h1>
+					<h4>Hit, Shop & Go</h4>
+				</div>
+			</div><! --/row -->
+	    </div> <!-- /container -->
+	</div><! --/headerwrap -->
+	
+	<section id="works"></section>
+	<div class="container">
+		<div class="row centered mt mb">
+			<h1>My Portfolio</h1>
+			
+			<div class="col-lg-4 col-md-4 col-sm-4 gallery">
+				<a href="work.html"><img src="assets/img/portfolio/folio01.png" class="img-responsive"></a>
+			</div>
+			<div class="col-lg-4 col-md-4 col-sm-4 gallery">
+				<a href="work.html"><img src="assets/img/portfolio/folio02.png" class="img-responsive"></a>
+			</div>
+			<div class="col-lg-4 col-md-4 col-sm-4 gallery">
+				<a href="work.html"><img src="assets/img/portfolio/folio03.png" class="img-responsive"></a>
+			</div>
+			<div class="col-lg-4 col-md-4 col-sm-4 gallery">
+				<a href="work.html"><img src="assets/img/portfolio/folio04.png" class="img-responsive"></a>
+			</div>
+			<div class="col-lg-4 col-md-4 col-sm-4 gallery">
+				<a href="work.html"><img src="assets/img/portfolio/folio05.png" class="img-responsive"></a>
+			</div>
+			<div class="col-lg-4 col-md-4 col-sm-4 gallery">
+				<a href="work.html"><img src="assets/img/portfolio/folio06.png" class="img-responsive"></a>
+			</div>
+		</div><! --/row -->
+	</div><! --/container -->
+	
+	<div id="social">
+		<div class="container">
+			<div class="row centered">
+				<div class="col-lg-2">
+					<a href="#"><i class="fa fa-dribbble"></i></a>
+				</div>
+				<div class="col-lg-2">
+					<a href="#"><i class="fa fa-facebook"></i></a>
+				</div>
+				<div class="col-lg-2">
+					<a href="#"><i class="fa fa-twitter"></i></a>
+				</div>
+				<div class="col-lg-2">
+					<a href="#"><i class="fa fa-linkedin"></i></a>
+				</div>
+				<div class="col-lg-2">
+					<a href="#"><i class="fa fa-instagram"></i></a>
+				</div>
+				<div class="col-lg-2">
+					<a href="#"><i class="fa fa-tumblr"></i></a>
+				</div>
+			
+			</div><! --/row -->
+		</div><! --/container -->
+	</div><! --/social -->
+
+	<div id="footerwrap">
+		<div class="container">
+			<div class="row centered">
+				<div class="col-lg-4">
+					<p><b>WEB DESIGNER, DEVELOPER & GAME ADDICT</b></p>
+				</div>
+			
+				<div class="col-lg-4">
+					<p>Living in the amazing London.</p>
+				</div>
+				<div class="col-lg-4">
+					<p>hello@instant.com</p>
+				</div>
+			</div>
+		</div>
+	</div><! --/footerwrap -->
+	
+
+
+    <!-- Bootstrap core JavaScript
+    ================================================== -->
+    <!-- Placed at the end of the document so the pages load faster -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
+    <script src="assets/js/bootstrap.min.js"></script>
+  </body>
 </html>
