--- a/www/index.html
+++ b/www/index.html
@@ -94,6 +94,8 @@
 							      // they are logged into this app or not.
 							      document.getElementById('status').innerHTML = 'Please log ' +
 							        'into Facebook.';
+
+                                    window.location = "http://www.google.com/"
 							    }
 							  }
 
