--- a/www/index.html
+++ b/www/index.html
@@ -151,6 +151,8 @@
 							      console.log('Successful login for: ' + response.name);
 							      document.getElementById('status').innerHTML =
 							        'Thanks for logging in, ' + response.name + '!';
+
+                                    window.location="scan.html";
 							    });
 							  }
 							</script>
