--- a/www/braintree.html
+++ b/www/braintree.html
@@ -4,7 +4,7 @@
   <body>
     <h1>Braintree Credit Card Transaction Form</h1>
     <div>
-      <form action="/create_transaction" method="POST" id="braintree-payment-form">
+      <form action="transaction.php" method="POST" id="braintree-payment-form">
         <p>
           <label>Card Number</label>
           <input type="text" size="20" autocomplete="off" data-encrypted-name="number" />
@@ -27,3 +27,5 @@
     </script>
   </body>
 </html>
+
+
